--- a/rapport/images.tex
+++ b/rapport/images.tex
@@ -21,41 +21,42 @@
 \end{figure}
 
 \section{Images Kibana}
+\subsection{}
 \begin{figure}[H]
 \center
 \includegraphics[width=0.4\textwidth,height=0.8\textheight]{kibanatuto/rap/4.png}
 \label{fig:kibanatuto4}
 \caption{Le tableau des champs}
 \end{figure}
-\paragraph{}
+\subsection{}
 \begin{figure}[H]
 \center
 \includegraphics[width=1\textwidth]{kibanatuto/rap/13.png}
 \label{fig:kibanatuto8}
 \caption{Camembert de répartition des logs sur la dernière semaine}
 \end{figure}
-\paragraph{}
+\subsection{}
 \begin{figure}[H]
 \center
 \includegraphics[width=1\textwidth]{kibanatuto/rap/15.png}
 \label{fig:kibanatuto9}
 \caption{Camembert de répartition des logs sur sur 3 semaines}
 \end{figure}
-\paragraph{}
+\subsection{}
 \begin{figure}[H]
 \center
 \includegraphics[width=0.8\textwidth]{kibanatuto/rap/17.png}
 \label{fig:kibanatuto10}
 \caption{Choix des visualisations}
 \end{figure}
-\paragraph{}
+\subsection{}
 \begin{figure}[H]
 \center
 \includegraphics[width=1\textwidth]{kibanatuto/rap/10.png}
 \label{fig:kibanatuto7}
 \caption{Visualisations possibles}
 \end{figure}
-\paragraph{}
+\subsection{}
 \begin{figure}[H]
 \center
 \includegraphics[width=1\textwidth]{kibanatuto/rap/19.png}
@@ -64,6 +65,7 @@
 \end{figure}
 
 \section{Statistiques Munin}
+\subsection{}
 \begin{figure}[H]
 \center
 \includegraphics[width=1\textwidth]{munin/elk2cpu-month2.png}
@@ -72,12 +74,14 @@
 \end{figure}
 Ne vous esquintez pas les yeux, le bleu est pratiquement indiscernable.
 
+\subsection{}
 \begin{figure}[H]
 \center
 \includegraphics[width=1\textwidth]{munin/elk2if_eth0-week.png}
 \label{fig:elk2eth0}
 \caption{Bande passante Up et Down de Elk2}
 \end{figure}
+\subsection{}
 \begin{figure}[H]
 \center
 \includegraphics[width=0.8\textwidth]{munin/elk1memory-day.png}
@@ -85,6 +89,7 @@ Ne vous esquintez pas les yeux, le bleu est pratiquement indiscernable.
 \caption{Utilisation RAM Elk1}
 \end{figure}
 La ligne orange représente la RAM effectivement utilisée, la zone bleue la mémoire virtuelle.
+\subsection{}
 \begin{figure}[H]
 \center
 \includegraphics[width=0.8\textwidth]{munin/elk1cpu-day.png}
