--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -96,7 +96,8 @@ sujet ainsi que les marges de manœuvres qu'il a su me laisser.
 Merci à toute l'équipe du réseau Lothaire pour son accueil chaleureux et son soutien.
 Je remercie plus particulièrement  Luc \textsc{Didry} et Stéphane \textsc{Fetter} pour leur
 aide, en général, et  notamment en système.
-
+\\[1cm]
+Enfin, merci à Karol \textsc{Proch} pour sa relecture attentive.
 %Page table des matières
 \setcounter{tocdepth}{1}
 \tableofcontents
@@ -296,10 +297,10 @@ sous-estimées.
 Réaliser ce projet m'a permis de mettre en pratique de nombreuses connaissances vues 
 en licence ASRALL, d'approfondir des notions de système, parfois assez pointues, 
 comme les capabilities. Mais aussi d'en apprendre plus sur un outil dont nous avions
-juste gratté la surface en cours : les expressions régulières. Ce stage m'a surtout 
+juste effleuré la surface en cours : les expressions régulières. Ce stage m'a surtout 
 permis d'appréhender et de mettre en place deux outils que je ne connaissais pas 
 Elasticsearch et Logstash. Ces logiciels sont en ce moment à la mode et ils semblent,
-au moins concernant Elasticsearch, être partis pour rester. C'est donc pour moi une chance
+au moins concernant Elasticsearch, être partis pour durer. C'est donc pour moi une chance
 d'avoir pu acquérir de l'expérience sur ces technologies qui me seront utile dans mon 
 prochain emploi.
 
@@ -320,6 +321,6 @@ prochain emploi.
 
 
 
-\printglossaries
+%\printglossaries
 
 \end{document}
